# ARIA

./: .gitignore  README.md
ARIA.MCP/: ARIA.MCP.slnx
ARIA.MCP/ARIA.MCP/: ARIA.MCP.csproj  ARIA.MCP.http  Program.cs
ARIA.MCP/ARIA.MCP/Models/: CodeChunk.cs  SearchResultResponse.cs
ARIA.MCP/ARIA.MCP/Services/: ChunkingService.cs  EmbeddingService.cs  GitHubService.cs  PineconeService.cs
ARIA.MCP/ARIA.MCP/Tools/: AnalyzeDepsTool.cs  FetchFileTool.cs  FetchRepoTool.cs  IndexRepoTool.cs  SearchCodeTool.cs
aria-agent/: main.py  pyproject.toml
aria-agent/src/: config.py
aria-agent/src/agent/: graph.py  nodes.py  tools.py
aria-agent/src/api/: main.py
aria-orchestrator/: pyproject.toml
aria-orchestrator/src/: config.py
aria-orchestrator/src/agent/: graph.py  state.py  tools.py
aria-orchestrator/src/api/: main.py
aria-toolbox/: aria-toolbox.slnx
aria-toolbox/aria-toolbox/: Program.cs  appsettings.example.json  aria-toolbox.csproj
aria-toolbox/aria-toolbox/Models/: CodeChunk.cs  SearchResultResponse.cs
aria-toolbox/aria-toolbox/Properties/: launchSettings.json
aria-toolbox/aria-toolbox/Services/: ChunkingService.cs  EmbeddingService.cs  GitHubService.cs  PineconeService.cs
aria-toolbox/aria-toolbox/Tools/: AnalyzeDepsTool.cs  FetchFileTool.cs  FetchRepoTool.cs  IndexRepoTool.cs  SearchCodeTool.cs
aria-web/: package-lock.json  package.json
aria-web/app/: globals.css  layout.tsx  page.tsx
aria-web/components/: ChatPanel.tsx  Navbar.tsx  RepoInput.tsx
aria-web/hooks/: useChat.ts
aria-web/lib/: constants.ts
aria-web/types/: index.ts
(+3 files in other folders)
