[project]
name = "aria-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.0.0",
]
